h2 fixed, now under h1; called .subtitle and .title respectively in CSS. The header's size is unpredictable and does not encompass the .subtitle or #searchInput or #submitBtn. Pushing this to develop so at least the words aren't going off-screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,7 @@ header {
     height: auto;
 }
 
-.title, 
-.subtitle {
+.title, .subtitle {
     float: left;
     margin: 10px 0 0 30px;
 }
